All task updation

--- a/CodeTest/View/Home.storyboard
+++ b/CodeTest/View/Home.storyboard
@@ -66,7 +66,7 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="none" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="cf3-cD-qF2">
-                                <rect key="frame" x="10" y="98" width="355" height="621"/>
+                                <rect key="frame" x="10" y="159" width="355" height="560"/>
                                 <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                                 <prototypes>
                                     <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="TblParentUserData" id="CEO-oL-sp5" customClass="TblParentUserData" customModule="CodeTest" customModuleProvider="target">
@@ -187,13 +187,20 @@
                                     </tableViewCell>
                                 </prototypes>
                             </tableView>
+                            <searchBar contentMode="redraw" translatesAutoresizingMaskIntoConstraints="NO" id="0II-X9-3LY">
+                                <rect key="frame" x="10" y="98" width="355" height="51"/>
+                                <textInputTraits key="textInputTraits"/>
+                            </searchBar>
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="lv8-kQ-ssx"/>
                         <color key="backgroundColor" white="0.66666666669999997" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <constraints>
                             <constraint firstItem="lv8-kQ-ssx" firstAttribute="bottom" secondItem="cf3-cD-qF2" secondAttribute="bottom" constant="10" id="90o-Ve-Akg"/>
-                            <constraint firstItem="cf3-cD-qF2" firstAttribute="top" secondItem="lv8-kQ-ssx" secondAttribute="top" constant="10" id="THb-Gu-mJF"/>
+                            <constraint firstAttribute="trailing" secondItem="0II-X9-3LY" secondAttribute="trailing" constant="10" id="Iio-db-I9S"/>
+                            <constraint firstItem="0II-X9-3LY" firstAttribute="leading" secondItem="lv8-kQ-ssx" secondAttribute="leading" constant="10" id="OMH-i9-xhp"/>
+                            <constraint firstItem="0II-X9-3LY" firstAttribute="top" secondItem="lv8-kQ-ssx" secondAttribute="top" constant="10" id="RTL-7I-MPK"/>
                             <constraint firstItem="cf3-cD-qF2" firstAttribute="leading" secondItem="lv8-kQ-ssx" secondAttribute="leading" constant="10" id="cDN-gk-yPz"/>
+                            <constraint firstItem="cf3-cD-qF2" firstAttribute="top" secondItem="0II-X9-3LY" secondAttribute="bottom" constant="10" id="cz6-VC-bGL"/>
                             <constraint firstItem="lv8-kQ-ssx" firstAttribute="trailing" secondItem="cf3-cD-qF2" secondAttribute="trailing" constant="10" id="nYj-xq-ciD"/>
                         </constraints>
                     </view>
@@ -201,6 +208,7 @@
                     <simulatedNavigationBarMetrics key="simulatedTopBarMetrics" prompted="NO"/>
                     <connections>
                         <outlet property="tblUserList" destination="cf3-cD-qF2" id="oZl-Aj-6rk"/>
+                        <outlet property="txtSearch" destination="0II-X9-3LY" id="zsV-GK-lEZ"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dcm-Wk-qvh" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
